--- a/docs/examples/model/feeder_ids_examples.ipynb
+++ b/docs/examples/model/feeder_ids_examples.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "## What Feeder IDs Mean\n",
     "\n",
-    "- `feeder_branch_id` references the branch that leaves a substation and feeds the component; every downstream branch that remains connected inherits the same feeder branch ID.\n",
+    "- `feeder_branch_id` references the branch that leaves a substation (a node with `node_type==NodeType.SUBSTATION_NODE`) and feeds the component; every downstream branch that remains connected inherits the same feeder branch ID.\n",
     "- `feeder_node_id` is the substation node ID that ultimately supplies the component. Nodes and branches without a feeding substation (including the substations themselves) receive an empty id `-2147483648`.\n",
     "\n",
     "`Grid.set_feeder_ids()` resets any previous feeder columns, tags each branch touching a substation with `is_feeder`, temporarily removes all substations to find active components, and stamps every member of those components with the appropriate feeder IDs."
@@ -31,36 +31,14 @@
    "outputs": [],
    "source": [
     "from power_grid_model_ds import Grid\n",
-    "from power_grid_model_ds.arrays import LineArray, NodeArray\n",
-    "from power_grid_model_ds.enums import NodeType\n",
     "\n",
-    "grid = Grid.empty()\n",
-    "# a single substation and two downstream nodes\n",
-    "substation = NodeArray(\n",
-    "    id=[101],\n",
-    "    u_rated=[10500.0],\n",
-    "    node_type=[NodeType.SUBSTATION_NODE.value],\n",
+    "grid = Grid.from_txt(\n",
+    "  \"S101 102 201\",\n",
+    "  \"102 103 202\",\n",
+    "  \"S101 104 203\",\n",
+    "  \"104 105 204\",\n",
+    "  \"103 105 205,open\"\n",
     ")\n",
-    "grid.append(substation, check_max_id=False)\n",
-    "other_nodes = NodeArray(\n",
-    "    id=[102, 103, 104, 105],\n",
-    "    u_rated=[10500.0] * 4,\n",
-    "    node_type=[NodeType.UNSPECIFIED.value] * 4,\n",
-    ")\n",
-    "grid.append(other_nodes, check_max_id=False)\n",
-    "lines = LineArray(\n",
-    "    id=[201, 202, 203, 204, 205],\n",
-    "    from_status=[1, 1, 1, 1, 0],\n",
-    "    to_status=[1, 1, 1, 1, 1],\n",
-    "    from_node=[101, 102, 101, 104, 103],\n",
-    "    to_node=[102, 103, 104, 105, 105],\n",
-    "    i_n=[200.0, 200.0, 120.0, 150.0, 180.0],\n",
-    "    r1=[0.1, 0.1, 0.1, 0.1, 0.1],\n",
-    "    x1=[0.03, 0.03, 0.03, 0.03, 0.03],\n",
-    "    c1=[0.0, 0.0, 0.0, 0.0, 0.0],\n",
-    "    tan1=[0.0, 0.0, 0.0, 0.0, 0.0],\n",
-    ")\n",
-    "grid.append(lines, check_max_id=False)\n",
     "\n",
     "grid.set_feeder_ids()"
    ]
@@ -82,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "1f69abad",
    "metadata": {},
    "outputs": [
@@ -109,10 +87,10 @@
    "source": [
     "print(\"Nodes\")\n",
     "for node in grid.node:\n",
-    "    nid = node.id\n",
+    "    node_id = node.id\n",
     "    feeder_node = node.feeder_node_id\n",
     "    feeder_branch = node.feeder_branch_id\n",
-    "    print(f\"node {nid}: feeder_node_id={feeder_node}, feeder_branch_id={feeder_branch}\")\n",
+    "    print(f\"node {node_id}: feeder_node_id={feeder_node}, feeder_branch_id={feeder_branch}\")\n",
     "print()\n",
     "print(\"Lines\")\n",
     "for line in grid.line:\n",
@@ -135,7 +113,8 @@
    "source": [
     "## Inspecting the Results\n",
     "\n",
-    "After the calculation every branch and node that remains connected to substation 101 carries `feeder_node_id` 101. The branches that directly touch the substation will also set `feeder_branch_id` equal to their own `id`, and the downstream branches inherit that value. Branches or nodes that were deactivated or isolated still show `-1`, which makes it easy to filter them out before safety checks or radial-feed reports.\n",
+    "After the calculation every branch and node that remains connected to substation 101 carries `feeder_node_id` 101. The branches that directly touch the substation will also set `feeder_branch_id` equal to their own `id`, and the downstream branches inherit that value. Branches or nodes that were deactivated or isolated still show and empty value, which makes it easy to filter them out before safety checks or radial-feed reports.\n",
+    "Substation nodes themselves always have empty an `feeder_node_id` and `feeder_branch_id`.\n",
     "\n",
     "Because the feeder IDs are derived from the active graph, you can trust them to reflect any changes made by `make_active` or `make_inactive` once you rerun `Grid.set_feeder_ids()`.\n",
     "We now update the grid structure and recalculate the feeder ids."
@@ -156,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "a925b7b8",
    "metadata": {},
    "outputs": [
@@ -168,10 +147,10 @@
       "Deactivate branch 203 and activate branch 205, then recompute feeder IDs\n",
       "Nodes after recomputation\n",
       "node 101: feeder_node_id=-2147483648, feeder_branch_id=-2147483648\n",
-      "node 102: feeder_node_id=101, feeder_branch_id=201\n",
-      "node 103: feeder_node_id=101, feeder_branch_id=201\n",
       "node 104: feeder_node_id=101, feeder_branch_id=201\n",
       "node 105: feeder_node_id=101, feeder_branch_id=201\n",
+      "node 102: feeder_node_id=101, feeder_branch_id=201\n",
+      "node 103: feeder_node_id=101, feeder_branch_id=201\n",
       "\n",
       "Lines after recomputation\n",
       "line 201: is_feeder=True, feeder_branch_id=201, feeder_node_id=101\n",
@@ -187,15 +166,16 @@
     "grid.make_inactive(branch=grid.line.get(203))\n",
     "grid.make_active(branch=grid.line.get(205))\n",
     "grid.set_feeder_ids()\n",
+    "\n",
     "print(\"Nodes after recomputation\")\n",
-    "for nid, feeder_node, feeder_branch in zip(grid.node.id, grid.node.feeder_node_id, grid.node.feeder_branch_id):\n",
-    "    print(f\"node {nid}: feeder_node_id={feeder_node}, feeder_branch_id={feeder_branch}\")\n",
-    "print()\n",
-    "print(\"Lines after recomputation\")\n",
-    "for bid, is_feeder, feeder_branch, feeder_node in zip(\n",
+    "for node_id, feeder_node, feeder_branch in zip(grid.node.id, grid.node.feeder_node_id, grid.node.feeder_branch_id):\n",
+    "    print(f\"node {node_id}: feeder_node_id={feeder_node}, feeder_branch_id={feeder_branch}\")\n",
+    "\n",
+    "print(\"\\nLines after recomputation\")\n",
+    "for line_id, is_feeder, feeder_branch, feeder_node in zip(\n",
     "    grid.line.id, grid.line.is_feeder, grid.line.feeder_branch_id, grid.line.feeder_node_id\n",
     "):\n",
-    "    print(f\"line {bid}: is_feeder={is_feeder}, feeder_branch_id={feeder_branch}, feeder_node_id={feeder_node}\")"
+    "    print(f\"line {line_id}: is_feeder={is_feeder}, feeder_branch_id={feeder_branch}, feeder_node_id={feeder_node}\")"
    ]
   },
   {
@@ -209,11 +189,55 @@
     "- Use the `feeder_node_id` column to group or color nodes/branches by the feeding substation and to quickly find segments that lost their connection (they remain at `-2147483648`).\n",
     "- Recompute feeder IDs before serializing or exporting a grid so fixtures and downstream tools can rely on the latest feeder tree without needing to rerun the calculation."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5b26ef14",
+   "metadata": {},
+   "source": [
+    "## Edge case\n",
+    "If a node lies in a connected path between two substation nodes, there is no unique `feeder_node_id` or `feeder_branch_id`. In this case one of the possible `feeder_node_id`/`feeder_branch_id` is picked and applied for all nodes in the path. \n",
+    "So it is guarenteed that all nodes in the path have the same `feeder_node_id`/`feeder_branch_id`, eventhough there is no unique solution."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1fe470aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " id | u_rated | node_type | feeder_branch_id | feeder_node_id \n",
+      " 1  |   nan   |     1     |   -2147483648    |  -2147483648   \n",
+      " 4  |   nan   |     1     |   -2147483648    |  -2147483648   \n",
+      " 2  |   nan   |     0     |        12        |       1        \n",
+      " 3  |   nan   |     0     |        12        |       1        \n",
+      " id | from_node | to_node | from_status | to_status | feeder_branch_id | feeder_node_id | is_feeder |  r1 |  x1 |  c1 | tan1 | i_n \n",
+      " 12 |     1     |    2    |      1      |     1     |        12        |       1        |    True   | nan | nan | nan | nan  | nan \n",
+      " 23 |     2     |    3    |      1      |     1     |        12        |       1        |   False   | nan | nan | nan | nan  | nan \n",
+      " 34 |     3     |    4    |      1      |     1     |        12        |       1        |    True   | nan | nan | nan | nan  | nan \n"
+     ]
+    }
+   ],
+   "source": [
+    "grid = Grid.from_txt(\n",
+    "    \"S1 2 12\", \n",
+    "    \"2 3 23\", \n",
+    "    \"3 S4 34\"\n",
+    ")\n",
+    "grid.set_feeder_ids()\n",
+    "\n",
+    "print(\"Nodes:\\n\",grid.node)\n",
+    "print(\"Lines:\\n\",grid.line)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv (3.12.6)",
+   "display_name": "power-grid-model-ds (3.13.9)",
    "language": "python",
    "name": "python3"
   },
@@ -227,7 +251,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
