--- a/docs/examples/model/feeder_ids_examples.ipynb
+++ b/docs/examples/model/feeder_ids_examples.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "f72e36eb",
    "metadata": {},
    "outputs": [],
@@ -33,11 +33,11 @@
     "from power_grid_model_ds import Grid\n",
     "\n",
     "grid = Grid.from_txt(\n",
-    "  \"S101 102 201\",\n",
-    "  \"102 103 202\",\n",
-    "  \"S101 104 203\",\n",
-    "  \"104 105 204\",\n",
-    "  \"103 105 205,open\"\n",
+    "    \"S101 102 201\",\n",
+    "    \"102 103 202\",\n",
+    "    \"S101 104 203\",\n",
+    "    \"104 105 204\",\n",
+    "    \"103 105 205,open\",\n",
     ")\n",
     "\n",
     "grid.set_feeder_ids()"
@@ -60,30 +60,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "1f69abad",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Nodes\n",
-      "node [101]: feeder_node_id=[-2147483648], feeder_branch_id=[-2147483648]\n",
-      "node [102]: feeder_node_id=[101], feeder_branch_id=[201]\n",
-      "node [103]: feeder_node_id=[101], feeder_branch_id=[201]\n",
-      "node [104]: feeder_node_id=[101], feeder_branch_id=[203]\n",
-      "node [105]: feeder_node_id=[101], feeder_branch_id=[203]\n",
-      "\n",
-      "Lines\n",
-      "line [201]: is_feeder=[ True], from_node=[101], to_node=[102], feeder_branch_id=[201], feeder_node_id=[101]\n",
-      "line [202]: is_feeder=[False], from_node=[102], to_node=[103], feeder_branch_id=[201], feeder_node_id=[101]\n",
-      "line [203]: is_feeder=[ True], from_node=[101], to_node=[104], feeder_branch_id=[203], feeder_node_id=[101]\n",
-      "line [204]: is_feeder=[False], from_node=[104], to_node=[105], feeder_branch_id=[203], feeder_node_id=[101]\n",
-      "line [205]: is_feeder=[False], from_node=[103], to_node=[105], feeder_branch_id=[-2147483648], feeder_node_id=[-2147483648]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Nodes\")\n",
     "for node in grid.node:\n",
@@ -138,29 +118,7 @@
    "execution_count": null,
    "id": "a925b7b8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Deactivate branch 203 and activate branch 205, then recompute feeder IDs\n",
-      "Nodes after recomputation\n",
-      "node 101: feeder_node_id=-2147483648, feeder_branch_id=-2147483648\n",
-      "node 104: feeder_node_id=101, feeder_branch_id=201\n",
-      "node 105: feeder_node_id=101, feeder_branch_id=201\n",
-      "node 102: feeder_node_id=101, feeder_branch_id=201\n",
-      "node 103: feeder_node_id=101, feeder_branch_id=201\n",
-      "\n",
-      "Lines after recomputation\n",
-      "line 201: is_feeder=True, feeder_branch_id=201, feeder_node_id=101\n",
-      "line 202: is_feeder=False, feeder_branch_id=201, feeder_node_id=101\n",
-      "line 203: is_feeder=True, feeder_branch_id=-2147483648, feeder_node_id=-2147483648\n",
-      "line 204: is_feeder=False, feeder_branch_id=201, feeder_node_id=101\n",
-      "line 205: is_feeder=False, feeder_branch_id=201, feeder_node_id=101\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"\\nDeactivate branch 203 and activate branch 205, then recompute feeder IDs\")\n",
     "grid.make_inactive(branch=grid.line.get(203))\n",
@@ -205,33 +163,13 @@
    "execution_count": null,
    "id": "1fe470aa",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " id | u_rated | node_type | feeder_branch_id | feeder_node_id \n",
-      " 1  |   nan   |     1     |   -2147483648    |  -2147483648   \n",
-      " 4  |   nan   |     1     |   -2147483648    |  -2147483648   \n",
-      " 2  |   nan   |     0     |        12        |       1        \n",
-      " 3  |   nan   |     0     |        12        |       1        \n",
-      " id | from_node | to_node | from_status | to_status | feeder_branch_id | feeder_node_id | is_feeder |  r1 |  x1 |  c1 | tan1 | i_n \n",
-      " 12 |     1     |    2    |      1      |     1     |        12        |       1        |    True   | nan | nan | nan | nan  | nan \n",
-      " 23 |     2     |    3    |      1      |     1     |        12        |       1        |   False   | nan | nan | nan | nan  | nan \n",
-      " 34 |     3     |    4    |      1      |     1     |        12        |       1        |    True   | nan | nan | nan | nan  | nan \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "grid = Grid.from_txt(\n",
-    "    \"S1 2 12\", \n",
-    "    \"2 3 23\", \n",
-    "    \"3 S4 34\"\n",
-    ")\n",
+    "grid = Grid.from_txt(\"S1 2 12\", \"2 3 23\", \"3 S4 34\")\n",
     "grid.set_feeder_ids()\n",
     "\n",
-    "print(\"Nodes:\\n\",grid.node)\n",
-    "print(\"Lines:\\n\",grid.line)"
+    "print(\"Nodes:\\n\", grid.node)\n",
+    "print(\"\\nLines:\\n\", grid.line)"
    ]
   }
  ],
