--- a/docs/demos/connecting_new_consumer.ipynb
+++ b/docs/demos/connecting_new_consumer.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
     "\n",
     "def find_closest_node(grid: ExtendedGrid, x: float, y: float) -> int:\n",
     "    dist = np.sqrt((grid.node.x_coor - x) ** 2 + (grid.node.y_coor - y) ** 2)\n",
-    "    return np.argmin(dist)\n",
+    "    return np.argmin(dist).item()\n",
     "\n",
     "\n",
     "def connect_new_consumer(\n",
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,27 +209,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " id | u_rated | node_type | feeder_branch_id | feeder_node_id |     u     |  x_coor |  y_coor \n",
+      " 1  | 10500.0 |     0     |        64        |       61       |10472.047..|205.198..|125.313..\n",
+      " 2  | 10500.0 |     0     |        64        |       61       |10495.232..|394.467..|482.338..\n",
+      " 3  | 10500.0 |     0     |        63        |       61       |10358.336..|465.974..|304.041..\n",
+      " 4  | 10500.0 |     0     |        78        |       61       |10501.496..|333.834..|127.368..\n",
+      " 5  | 10500.0 |     0     |        63        |       61       |10385.874..|297.977..|339.764..\n",
+      "                                      (..12 hidden rows..)                                     \n",
+      " 18 | 10500.0 |     0     |        63        |       61       |10382.357..|277.658..|126.572..\n",
+      " 19 | 10500.0 |     0     |        78        |       61       |10521.243..|107.354..|138.800..\n",
+      " 20 | 10500.0 |     0     |        64        |       61       |10503.396..|146.666..|203.019..\n",
+      " 61 | 10500.0 |     1     |   -2147483648    |  -2147483648   |10499.555..|276.297..|433.913..\n",
+      " 93 | 10500.0 |     0     |        63        |       61       |10385.414..|  300.0  |  300.0  \n"
+     ]
+    }
+   ],
    "source": [
     "print(grid.node)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " id | from_node | to_node | from_status | to_status | feeder_branch_id | feeder_node_id | is_feeder |   r1  |   x1  |  c1 | tan1 |   i_n    | i_from \n",
+      " 63 |     61    |    17   |      1      |     1     |        63        |       61       |    True   |0.110..|0.013..| 0.0 | 0.0  |103.9613..|89.228..\n",
+      " 64 |     61    |    13   |      1      |     1     |        64        |       61       |    True   |0.325..|0.015..| 0.0 | 0.0  |100.4538..|13.217..\n",
+      " 65 |     17    |    5    |      1      |     1     |        63        |       61       |   False   |0.657..|2.575..| 0.0 | 0.0  |1311.550..|86.815..\n",
+      " 66 |     13    |    11   |      1      |     1     |        64        |       61       |   False   |0.213..|0.016..| 0.0 | 0.0  |114.4995..|53.125..\n",
+      " 67 |     5     |    18   |      1      |     1     |        63        |       61       |   False   |0.061..|0.029..| 0.0 | 0.0  |170.8020..|30.462..\n",
+      "                                                                 (..21 hidden rows..)                                                                 \n",
+      " 89 |     1     |    18   |      1      |     0     |   -2147483648    |  -2147483648   |   False   |0.341..|0.012..| 0.0 | 0.0  |221.8579..|  0.0   \n",
+      " 90 |     18    |    2    |      1      |     0     |   -2147483648    |  -2147483648   |   False   |0.122..|0.006..| 0.0 | 0.0  |387.5294..|  0.0   \n",
+      " 91 |     61    |    17   |      1      |     0     |   -2147483648    |  -2147483648   |    True   |0.210..|0.001..| 0.0 | 0.0  |267.6662..|  0.0   \n",
+      " 92 |     3     |    11   |      1      |     0     |   -2147483648    |  -2147483648   |   False   |0.030..|0.050..| 0.0 | 0.0  |272.8941..|  0.0   \n",
+      " 95 |     5     |    93   |      1      |     1     |        63        |       61       |   False   |0.003..|0.003..| 0.0 | 0.0  |  200.0   |56.693..\n"
+     ]
+    }
+   ],
    "source": [
     "print(grid.line)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overloaded nodes: []\n",
+      "Overloaded lines: []\n"
+     ]
+    }
+   ],
    "source": [
     "print(f\"Overloaded nodes: {grid.node[grid.node.is_overloaded].id}\")\n",
     "print(f\"Overloaded lines: {grid.line[grid.line.is_overloaded].id}\")"
@@ -244,9 +291,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overloaded nodes: []\n",
+      "Overloaded lines: [63 64 67 70]\n"
+     ]
+    }
+   ],
    "source": [
     "for _ in range(10):\n",
     "    new_consumer, new_consumer_load = create_new_consumer_arrays(\n",
@@ -262,7 +318,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "power-grid-model-ds (3.13.9)",
    "language": "python",
    "name": "python3"
   },
@@ -276,7 +332,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
