--- a/docs/examples/model/graph_examples.ipynb
+++ b/docs/examples/model/graph_examples.ipynb
@@ -149,7 +149,8 @@
     "graph.add_branch(5, 4)\n",
     "\n",
     "substation_nodes = np.array([1])\n",
-    "components = graph.get_components(substation_nodes=substation_nodes)\n",
+    "with graph.tmp_remove_nodes(substation_nodes):\n",
+    "    components = graph.get_components()\n",
     "print(f\"Connected components: {components}\")"
    ]
   },
