--- a/docs/model_interface.ipynb
+++ b/docs/model_interface.ipynb
@@ -42,9 +42,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'RadialGridGenerator' object has no attribute 'run_failed'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpower_grid_model_ds\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mgenerators\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m RadialGridGenerator\n\u001b[32m      3\u001b[39m grid_generator = RadialGridGenerator(grid_class=Grid, nr_nodes=\u001b[32m1000\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m grid = \u001b[43mgrid_generator\u001b[49m\u001b[43m.\u001b[49m\u001b[43mrun_failed\u001b[49m(seed=\u001b[32m0\u001b[39m)\n",
+      "\u001b[31mAttributeError\u001b[39m: 'RadialGridGenerator' object has no attribute 'run_failed'"
+     ]
+    }
+   ],
    "source": [
     "from power_grid_model_ds.generators import RadialGridGenerator\n",
     "\n",
@@ -273,7 +285,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "power-grid-model-ds (3.13.9)",
    "language": "python",
    "name": "python3"
   },
@@ -287,7 +299,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
