--- a/docs/examples/model/array_examples.ipynb
+++ b/docs/examples/model/array_examples.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,17 +108,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "'FancyTestArray' object has no attribute 'size'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Attempting to delete a numpy attribute raises an error\n",
     "try:\n",
@@ -139,22 +131,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " id | test_int | test_float | test_str | test_bool \n",
-      " 9  |    3     |    4.0     |    a     |    True   \n",
-      " id | test_int | test_float | test_str | test_bool \n",
-      " 9  |    0     |    4.0     |    c     |   False   \n",
-      " id | test_int | test_float | test_str | test_bool \n",
-      " 9  |    4     |    1.0     |    d     |    True   \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for row in fancy_array:\n",
     "    print(row)"
@@ -171,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,17 +169,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "'numpy.ndarray' object has no attribute 'non_existing_attribute'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "try:\n",
     "    value = fancy_array.non_existing_attribute\n",
@@ -219,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,21 +240,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " id | value \n",
-      " 1  |   10  \n",
-      " 2  |   20  \n",
-      " 3  |   30  \n",
-      " 4  |   40  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class FancyTestArray(FancyArray):\n",
     "    \"\"\"Test array with some attributes\"\"\"\n",
@@ -318,20 +277,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " id | value \n",
-      " 1  |   10  \n",
-      " 2  |   20  \n",
-      " 3  |   30  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Creating a FancyTestArray with duplicate values\n",
     "fancy_array = FancyTestArray(\n",
@@ -356,20 +304,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " id | value \n",
-      " 1  |   10  \n",
-      " 2  |   20  \n",
-      " 3  |   30  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Creating a FancyArray with unsorted values\n",
     "fancy_array = FancyTestArray(\n",
@@ -393,17 +330,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Are the arrays equal? True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Creating two FancyTestArray instances for comparison\n",
     "array1 = FancyTestArray(\n",
@@ -437,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,19 +385,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " id | value \n",
-      " 2  |   20  \n",
-      " 3  |   30  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Exclude elements where 'value' is 10\n",
     "excluded_array = fancy_array.exclude(value=10)\n",
@@ -486,18 +405,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " id | value \n",
-      " 3  |   30  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Exclude elements where 'id'=1 or 'value'=20\n",
     "excluded_array = fancy_array.exclude(id=1, value=20, mode_=\"OR\")\n",
@@ -517,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -555,19 +465,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " id | value \n",
-      " 1  |   10  \n",
-      " 2  |   20  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Filter elements where 'id' is 1 or 'value' is 20\n",
     "filtered_array = fancy_array.filter(id=1, value=20, mode_=\"OR\")\n",
@@ -587,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -606,18 +506,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " id | value \n",
-      " 2  |   20  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Get element where 'value' is 20\n",
     "element = fancy_array.get(value=20)\n",
@@ -635,18 +526,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Multiple records found\n",
-      "No record found\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Handling multiple matches\n",
     "from power_grid_model_ds.errors import MultipleRecordsReturned, RecordDoesNotExist\n",
@@ -684,8 +566,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
