--- a/docs/examples/utils/grid_from_txt_examples.ipynb
+++ b/docs/examples/utils/grid_from_txt_examples.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,25 +104,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3 6 14,transformer\n",
-      "S1 2 10\n",
-      "S1 3 11,open\n",
-      "2 7 12\n",
-      "3 5 13\n",
-      "5 7 15\n",
-      "7 8 16\n",
-      "8 9 17,generic_branch\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(grid)"
    ]
@@ -143,8 +127,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
