chore: perform check if any docs cell gives an error (#169)
* fix: test docs during PR

Signed-off-by: Vincent Koppen <vincent.koppen@alliander.com>

* assure empty notebooks

Signed-off-by: Vincent Koppen <vincent.koppen@alliander.com>

---------

Signed-off-by: Vincent Koppen <vincent.koppen@alliander.com>

--- a/docs/examples/model/graph_examples.ipynb
+++ b/docs/examples/model/graph_examples.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,8 @@
     "graph.add_branch(5, 4)\n",
     "\n",
     "substation_nodes = np.array([1])\n",
-    "components = graph.get_components(substation_nodes=substation_nodes)\n",
+    "with graph.tmp_remove_nodes(substation_nodes):\n",
+    "    components = graph.get_components()\n",
     "print(f\"Connected components: {components}\")"
    ]
   },
@@ -193,8 +194,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
