--- a/docs/demos/connecting_new_consumer.ipynb
+++ b/docs/demos/connecting_new_consumer.ipynb
@@ -139,7 +139,7 @@
     "\n",
     "def find_closest_node(grid: ExtendedGrid, x: float, y: float) -> int:\n",
     "    dist = np.sqrt((grid.node.x_coor - x) ** 2 + (grid.node.y_coor - y) ** 2)\n",
-    "    return np.argmin(dist)\n",
+    "    return np.argmin(dist).item()\n",
     "\n",
     "\n",
     "def connect_new_consumer(\n",
@@ -262,7 +262,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "power-grid-model-ds (3.13.9)",
    "language": "python",
    "name": "python3"
   },
@@ -275,8 +275,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
